# Project-Physical-AI-Text-Book

./: .gitignore  CHECKLIST.md  README.md  SUBMISSION_MATERIALS.md  docusaurus.config.js
backend/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  agent.py  main.py  processing_state.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  retrieve.py  test_gemini.py
backend/chat_api/: __init__.py  config.py  dependencies.py  main.py  models.py
backend/chat_api/services/: chat_service.py  rag_service.py
backend/tests/: test_main.py
docs/module-1/: chapter-2-humanoid-robotics-landscape.mdx
docs/module-2/: chapter-5-ros-2-architecture.mdx  chapter-8-ros-2-systems-engineering.mdx  index.mdx
docs/module-3/: chapter-10-unity-human-robot-interaction.mdx  chapter-12-isaac-ros-navigation.mdx  chapter-9-gazebo-physics-simulation.mdx
docs/module-4/: chapter-13-vision-humanoid-robots.mdx  index.mdx
history/adr/: 002-simulation-first-pedagogy.adr.md  003-research-concurrent-writing-methodology.adr.md  adr-1-technology-stack-selection-for-rag-retrieval.md
physical-ai-textbook/: .gitkeep  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
physical-ai-textbook/docs/: intro.md
rag-backend/: .env  ingest.mjs  main.py  package-lock.json  package.json
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-rag-retrieval-pipeline/: data-model.md  plan.md  (+3 more)
(+62 files in other folders)
